<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.storexyz.Principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/comprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitulo"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <TextView
            android:text="@string/sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSexo" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:id="@+id/cboSexo" />

        <TextView
            android:text="@string/tipoz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTipoZapato" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cboTipoZapato"
            android:layout_weight="0.04" />

        <TextView
            android:text="@string/marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMarca" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cboMarca"
            android:layout_weight="0.04" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtCantidad"
                android:layout_weight="1"
                android:hint="@string/cantidad" />

            <Button
                android:text="@string/comprar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnComprar"
                android:layout_weight="1"
                android:onClick="calcular" />
        </LinearLayout>

        <TextView
            android:text="@string/unidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtVunidad" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTunidad"
            android:layout_weight="0.08" />

        <TextView
            android:text="@string/total_compra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTotal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTotCompra"
            android:layout_weight="0.12" />

        <Button
            android:text="@string/borrar"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnBorrar" />

    </LinearLayout>

</RelativeLayout>
